--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "2.9.7",
     "@nextui-org/react": "^1.0.0-beta.9",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
@@ -19,9 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-hook-form": "7.34.1",
     "react-router-dom": "6",
     "use-dark-mode": "^2.3.1",
     "vite-tsconfig-paths": "^3.5.0",
+    "yup": "0.32.11",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@nabla/vite-plugin-eslint": "^1.4.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/yup": "0.29.14",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-react": "^2.0.0",
