--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
+    "next-themes": "^0.2.1",
     "typescript": "4.8.4"
   }
 }
