--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -2,7 +2,13 @@ services:
   db:
     image: postgres
     restart: always
+    volumes:
+      - awesome-shop:/var/lib/postgresql/data
+    ports:
+      - "5433:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      # POSTGRES_DB: ${POSTGRES_DB}
+
+volumes:
+  awesome-shop:
