--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "next": "12.3.1",
     "next-auth": "^4.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
