--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "formik": "^2.2.9",
+    "jose": "^4.11.1",
     "next": "12.3.1",
     "next-auth": "^4.13.0",
     "react": "18.2.0",
